fix google fonts import url to use https

--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -1,7 +1,7 @@
 @import "~purecss/build/pure.css";
 @import "~font-awesome/css/font-awesome.css";
 
-@import url(http://fonts.googleapis.com/css?family=Fjalla+One);
+@import url(https://fonts.googleapis.com/css?family=Fjalla+One);
 
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
